feat:login-register/with-yup

--- a/src/Styles/globalStyles.css
+++ b/src/Styles/globalStyles.css
@@ -1,7 +1,7 @@
 :root {
   --color-primary-darker:#591515;
   --color-primary:#AF2B36;
-  --color-secondary:#372148;
+  --color-secondary:#a01420;
   --color-primary-lighter:#DCB4B7;
   
   --color-grey-900:#121214; 
