refactor:minor-fixes-changes

--- a/src/Styles/globalStyles.css
+++ b/src/Styles/globalStyles.css
@@ -23,8 +23,8 @@
   --color-success:#3FE864;
   --color-information:#155BCB;
   
-  --font-family-default:'Inter', sans-serif;
-  --font-family-2:'Roboto', sans-serif;
+  --font-family-default:'Roboto', sans-serif;
+  
 
   --title-size-big:6rem;
   --title-size-medium:4rem;
